# packpal

./: .env.example  .gitignore  README.md  docker-compose.yml  schema.sql
.github/workflows/: deploy.yml
assistant/: .dockerignore  Dockerfile  langgraph.json  pyproject.toml
assistant/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
assistant/packpal_assistant.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
assistant/src/graphs/assistant/: graph.py
assistant/src/graphs/assistant/nodes/: greeting.py  handoff.py
assistant/src/graphs/assistant/routing/: route_after_creator.py  route_entry_point.py
assistant/src/graphs/creator/: graph.py
assistant/src/graphs/creator/nodes/: chat.py  list_generator.py
assistant/src/graphs/creator/routing/: route_after_chat.py
assistant/src/graphs/editor/: graph.py
assistant/src/graphs/editor/nodes/: editor.py  fallback.py
assistant/src/graphs/editor/routing/: should_continue.py
assistant/src/models/: category.py  edits.py  item.py  state.py  trip.py
assistant/src/utils/: apply_edits.py  config.py  llm.py
backend/: Dockerfile  environment.yml  requirements.txt
backend/app/: __init__.py  config.py
backend/assistant/: __main__.py  assistant.py  graph.py  system_prompt.py
frontend/: package-lock.json  package.json  proxy.ts
frontend-old/: middleware.ts  package.json
frontend/app/: error.tsx  globals.css  layout.tsx  page.tsx
frontend/contexts/: AuthContext.tsx  ModalContext.tsx
frontend/hooks/: useCategoryActions.ts  useTheme.ts  (+4 more)
(+193 files in other folders)
