[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "packpal_assistant"
version = "0.1.0"
dependencies = [
    "langgraph",
    "langchain",
    "langchain-google-genai",
    "python-dotenv",
    "langgraph-sdk",
    "pydantic",
    "langchain-core"
]

[project.optional-dependencies]
dev = [
    "langgraph-cli[draw, inmem]"
]

[tool.setuptools.packages.find]
where = ["."]